terraform/network.tf
# For this demo purpose, we create a typical vpc from scratch, to make sure everything works just right
# For other purposes, network might already be created, in which case you would just use it and remove/comment out this file.

resource "aws_vpc" "default" {
  cidr_block = "10.20.0.0/16"
  tags = "${merge(
    local.common_tags,
    map(
        "Name", "${var.app_name}",
        "kubernetes.io/cluster/${var.cluster-name}", "shared"
    )
  )}"
}

# Create var.az_count private subnets, each in a different AZ
resource "aws_subnet" "private" {
  count             = "${var.az_count}"
  cidr_block        = "${cidrsubnet(aws_vpc.default.cidr_block, 8, count.index)}"
  availability_zone = "${data.aws_availability_zones.available.names[count.index]}"
  vpc_id            = "${aws_vpc.default.id}"
  tags = "${merge(
    local.common_tags,
    map(
        "Name", "${var.app_name}-private",
        "kubernetes.io/cluster/${var.cluster-name}", "shared"
    )
  )}"

}

# Create var.az_count public subnets, each in a different AZ
resource "aws_subnet" "public" {
  count                   = "${var.az_count}"
  cidr_block              = "${cidrsubnet(aws_vpc.default.cidr_block, 8, var.az_count + count.index)}"
  availability_zone       = "${data.aws_availability_zones.available.names[count.index]}"
  vpc_id                  = "${aws_vpc.default.id}"
  map_public_ip_on_launch = true
  tags = "${merge(
    local.common_tags,
    map(
        "Name", "${var.app_name}-public",
        "kubernetes.io/cluster/${var.cluster-name}", "shared"
    )
  )}"

}

# IGW for the public subnet
resource "aws_internet_gateway" "default" {
  vpc_id = "${aws_vpc.default.id}"
  tags = "${merge(
    local.common_tags,
    map(
        "Name", "${var.app_name}"
    )
  )}"

}

# Route the public subnet traffic through the IGW
resource "aws_route" "internet_access" {
  route_table_id         = "${aws_vpc.default.main_route_table_id}"
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = "${aws_internet_gateway.default.id}"
}

# Create a NAT gateway with an EIP for each private subnet to get internet connectivity
resource "aws_eip" "gw" {
  count      = "${var.az_count}"
  vpc        = true
  depends_on = ["aws_internet_gateway.default"]
  tags = "${merge(
    local.common_tags,
    map(
        "Name", "${var.app_name}"
    )
  )}"  
}

resource "aws_nat_gateway" "gw" {
  count         = "${var.az_count}"
  subnet_id     = "${element(aws_subnet.public.*.id, count.index)}"
  allocation_id = "${element(aws_eip.gw.*.id, count.index)}"
  tags = "${merge(
    local.common_tags,
    map(
        "Name", "${var.app_name}"
    )
  )}"  
}

# Create a new route table for the private subnets
# And make it route non-local traffic through the NAT gateway to the internet
resource "aws_route_table" "private" {
  count  = "${var.az_count}"
  vpc_id = "${aws_vpc.default.id}"

  route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = "${element(aws_nat_gateway.gw.*.id, count.index)}"
  }
  tags = "${merge(
    local.common_tags,
    map(
        "Name", "${var.app_name}"
    )
  )}"
}

# Explicitely associate the newly created route tables to the private subnets (so they don't default to the main route table)
resource "aws_route_table_association" "private" {
  count          = "${var.az_count}"
  subnet_id      = "${element(aws_subnet.private.*.id, count.index)}"
  route_table_id = "${element(aws_route_table.private.*.id, count.index)}"
}
